--- a/DEV/css/CMD.css
+++ b/DEV/css/CMD.css
@@ -338,7 +338,7 @@ h1,h2,h3,h4,h5,h6{
 }
 
 
-input{
+input, textarea{
  border: 1px solid #E0E3E8;
  box-shadow: none;
  border-radius: 4px;
@@ -485,12 +485,6 @@ select::-ms-expand {
       &:hover,&.on{
         color: #393C40;
       }
-/*      &:first-child{
-        border-radius: 4px 0 0 4px;
-      }
-      &:last-child{
-        border-radius: 0 4px 4px 0;
-      }*/
     }
     .prev, .next{
       width: 0;
@@ -522,6 +516,50 @@ select::-ms-expand {
 
 
 /*公共表单样式*/
+
+
+
+
+.pub_form{
+  padding: 20px;
+  ul{
+    padding-bottom: 10px;
+  }
+  li{
+    padding: 15px 0;
+    span{
+      color: #707379;
+      font-size: 14px;
+      line-height: 14px;
+      width: 100px;
+      height: 36px;
+      line-height: 36px;
+      display: inline-block;
+      vertical-align: top;
+    }
+    input[type=text],input[type=password], textarea{
+      color: #212224;
+      font-size: 14px;
+      line-height: 18px;
+      padding: 8px;
+      border-radius: 4px;
+      width: 366px;
+    }
+    textarea{
+      height: 90px;
+
+    }
+  }
+}
+
+
+
+
+
+
+
+
+
 .form{
   li{
     padding: 15px 0;
