校区-咨询登记-添加班组

--- a/DEV/css/CMD.css
+++ b/DEV/css/CMD.css
@@ -562,6 +562,11 @@ select::-ms-expand {
       height: 90px;
 
     }
+    &.tips{
+      padding: 5px 0;
+      color: #AAAEB3;
+      font-size: 12px;
+    }
   }
 }
 
