--- a/DEV/css/CMD.css
+++ b/DEV/css/CMD.css
@@ -343,6 +343,9 @@ input, textarea{
  box-shadow: none;
  border-radius: 4px;
 }
+input[type=radio]{
+  margin-right: 5px;
+}
 button, input[type=button], .btn, .btn_dis, .btn_grey{
   border-radius: 4px;
   background-color: #3580d9;
