--- a/DEV/js/modules/zone_list.css
+++ b/DEV/js/modules/zone_list.css
@@ -1,4 +1,4 @@
-button{
+/*button{
 	border-radius: 4px;
 	background-color: #C6C9CE;
 	border: 1px solid #C6C9CE;
@@ -92,4 +92,4 @@ button{
 			}
 		}
 	}
-}
+}*/
