--- a/DEV/js/modules/zone_teacherInfo.css
+++ b/DEV/js/modules/zone_teacherInfo.css
@@ -122,10 +122,10 @@ button{
 			border-radius: 4px;
 			padding: 18px 32px 24px 32px;
 			display: inline-block;
-			width: 243px;
+			width: 23%;
 			border: none;
 			margin-top: 14px;
-			margin-right: 34px;
+			margin-right: 1.6%;
 			&.data1{
 				
 			}
