--- a/DEV/js/modules/zone_teacherList.css
+++ b/DEV/js/modules/zone_teacherList.css
@@ -1,95 +1,14 @@
-button{
-	border-radius: 4px;
-	background-color: #C6C9CE;
-	border: 1px solid #C6C9CE;
-	box-shadow: none;
-	color: #FFF;
-	font-size: 14px;
-	line-height: 14px;
-	min-width: 138px;
-	height: 36px;
-	padding: 11px 0;
-	font-weight: 100;
-	&:focus{
-		outline: none;
+.pub_list{
+	.body{
+		font-size: 14px;
 	}
-	&.on{
-		background-color: #4580D3;
-		border-color: #4580D3;
-		cursor: pointer;
-		&:hover{
-			background-color: #1690F3;
-		}
+	.page{
+		top: 110px;
 	}
 }
-.content{
-	.title{
-		padding: 25px 30px;
-		h3{
-			font-size: 18px;
-			line-height: 18px;
-			color: #3A3C40;
-			padding: 4px 0;
-			display: inline-block;
-			width: 400px;
-		}
-		a{
-			color: #FFF;
-			background-color: #4580D3;
-			font-size: 14px;
-			padding: 9.5px 0;
-			display: inline-block;
-			width: 126px;
-			text-align: center;
-			border-radius: 4px;
-			line-height: 14px;
-			float: right;
-			i{
-				font-size: 20px;
-				color: #FFF;
-				margin-right: 6px;
-			}
-
-		}
-	}
-	.header{
-		background-color: #FCFCFC;
-		border-top: 1px solid #EAEAEA;
-		border-bottom: 1px solid #EAEAEA;
-		p{
-			width: 12%;
-			display: inline-block;
-			padding-left: 30px;
-			color: #AAAEB2;
-			padding-top: 14px;
-			padding-bottom: 14px;
-		}
-	}
-	.list{
-		border-bottom: 1px solid #EAEAEA;
-		p{
-			width: 12%;
-			display: inline-block;
-			padding-left: 30px;
-			color: #3A3C40;
-			padding-top: 14px;
-			padding-bottom: 14px;
-			a{
-				color: #4580D2;
-			}
-		}
-	}
-	.importBtn{
-		margin-top: 30px;
-		margin-left: 30px;
-		text-align: center;
-		vertical-align: top;
-		padding: 8px 0;
-		i{
-			width: 14px;
-			height: 14px;
-			display: inline-block;
-			margin-right: 8px;
-		}
+.run{
+	padding: 10px 0;
+	.btn{
+		margin: 0 20px;
 	}
 }
