--- a/DEV/js/modules/zone_teacherSet.css
+++ b/DEV/js/modules/zone_teacherSet.css
@@ -1,3 +1,13 @@
+.pub_form{
+	li{
+		input[type=text].short{
+			width: 140px;
+    		margin-right: 0;
+		}
+	}
+}
+
+/*
 input{
 	border: 1px solid #E0E3E8;
 	box-shadow: none;
@@ -27,34 +37,6 @@ button{
 		}
 	}
 }
-select {
-	/*Chrome和Firefox里面的边框是不一样的，所以复写了一下*/
-	border: solid 1px #CED0D9;
-	/*很关键：将默认的select选择框样式清除*/
-	appearance: none;
-	-moz-appearance: none;
-	-webkit-appearance: none;
-	/*在选择框的最右侧中间显示小箭头图片*/
-	background: url("http://ourjs.github.io/static/2015/arrow.png") no-repeat scroll right center transparent;
-	background-position: 117px center;
-	background-color: #F3F5F8;
-	/*为下拉小箭头留出一点位置，避免被文字覆盖*/
-	padding-right: 24px;
-
-	font-size: 14px;
-	color: #3A3C40;
-	padding-top: 7px;
-	padding-bottom: 7px;
-	padding-left: 15px;
-	width: 140px;
-	border-radius: 4px;
-}
-/*清除ie的默认选择框样式清除，隐藏下拉箭头*/
-select::-ms-expand {
-	display: none;
-}
-
-
 .content{
 	padding-top: 33px;
 	padding-bottom: 105px;
@@ -91,4 +73,4 @@ select::-ms-expand {
 		margin-top: 70px;
 		margin-left: 35px;
 	}
-}
+}*/
