--- a/DEV/css/CMD.css
+++ b/DEV/css/CMD.css
@@ -870,6 +870,108 @@ select::-ms-expand {
 }
 
 
+
+
+/*dialog：pop、tips、alert start*/
+.dialogPopBox{
+    /*display:none;*/
+    width:500px;
+    height: 400px;
+    position:absolute;
+    border-radius:5px;
+    background:#fff;
+    border:1px solid #d6d9dc;
+    z-index:11;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+}
+.dialogPopBox .head{
+    padding: 6px 15px;
+    line-height: 30px;
+    border-bottom: 1px solid #eee;
+}
+.dialogPopBox .head a{
+    float: right;
+    padding: 0 5px;
+    color: #666;
+}
+.dialogPopBox .content{
+    padding: 8px 12px 50px;
+}
+.dialogPopBox .btn-confirm{
+    width: 100%;
+    height:50px;
+    text-align:center;
+    background:#f7f7f7;
+    padding:8px 0 6px;
+    line-height:36px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+}
+.dialogPopBox .btn-Blue, .dialogPopBox .btn-Grey{
+    display: inline-block;
+    width:100px;
+    height:36px;
+    background:#3580d9;
+    border-radius:3px;
+    color:#fff;
+    cursor:pointer;
+    margin:0 5px;
+}
+.dialogPopBox .btn-Grey{
+    line-height: 34px;
+    border: 1px solid #ced0da; 
+    background: #f4f6f9;
+    color: #393C40;
+}
+.bodyCover{
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 10;
+    opacity: 0.5;
+    width: 100%;
+    height: 100%;
+    display: none;
+    background: #000;
+}
+
+.dialogTipsBox{
+    min-width: 350px;
+    line-height: 28px;
+    text-align: center;
+    position: fixed;
+    left: 50%;
+    top: 0;
+    z-index: 99;
+    background: #eaf2fb;
+    padding: 0 10px;
+    color: #258FE6;
+    border: 1px solid #258FE6;
+    border-top: none;
+    border-radius: 0 0 3px 3px;
+    white-space: nowrap;
+    display: none;
+    transform: translate(-50%, 0);
+    .error{
+        color: #ff0101;
+        background: #ffe9eb;
+        border: 1px solid #ff0101;
+        border-top: none;
+    }
+    a{
+        text-decoration: underline;
+        vertical-align: top;
+        margin: 0 3px;
+        &:hover{
+            color: #c00;
+        }
+    }
+}
+/*dialog：pop、tips、alert end*/
+
 /*.main{
   position: absolute;
   left: 0;
