--- a/DEV/css/CMD.css
+++ b/DEV/css/CMD.css
@@ -873,10 +873,24 @@ select::-ms-expand {
 
 
 /*dialog：pop、tips、alert start*/
+@keyframes fadeShow{
+  0% {
+    width:0;
+    height: 0;
+    opacity: 0;
+  }
+}
+@keyframes fadeIn{
+  0% {
+    opacity: 0;
+  }
+}
+
 .dialogPopBox{
-    /*display:none;*/
     width:500px;
     height: 400px;
+    max-width: 90%;
+    max-height: 90%;
     position:absolute;
     border-radius:5px;
     background:#fff;
@@ -885,9 +899,13 @@ select::-ms-expand {
     left: 50%;
     top: 50%;
     transform: translate(-50%,-50%);
+    animation: fadeShow 0.5s ease;
+    display: flex;
+    flex-direction: column;
 }
 .dialogPopBox .head{
     padding: 6px 15px;
+    margin-bottom: 12px;
     line-height: 30px;
     border-bottom: 1px solid #eee;
 }
@@ -897,18 +915,18 @@ select::-ms-expand {
     color: #666;
 }
 .dialogPopBox .content{
-    padding: 8px 12px 50px;
+    padding: 0 15px;
+    flex: 1;
+    overflow: auto;
 }
 .dialogPopBox .btn-confirm{
     width: 100%;
     height:50px;
+    margin-top: 12px;
+    padding:8px 0 6px;
     text-align:center;
     background:#f7f7f7;
-    padding:8px 0 6px;
     line-height:36px;
-    position: absolute;
-    left: 0;
-    bottom: 0;
 }
 .dialogPopBox .btn-Blue, .dialogPopBox .btn-Grey{
     display: inline-block;
@@ -919,6 +937,7 @@ select::-ms-expand {
     color:#fff;
     cursor:pointer;
     margin:0 5px;
+    animation: fadeShow .5s;
 }
 .dialogPopBox .btn-Grey{
     line-height: 34px;
@@ -934,8 +953,8 @@ select::-ms-expand {
     opacity: 0.5;
     width: 100%;
     height: 100%;
-    display: none;
     background: #000;
+    animation: fadeIn 0.3s ease;
 }
 
 .dialogTipsBox{
