--- a/DEV/js/modules/SchoolHome.css
+++ b/DEV/js/modules/SchoolHome.css
@@ -1,31 +1,4 @@
-select {
-	/*Chrome和Firefox里面的边框是不一样的，所以复写了一下*/
-	border: solid 1px #CED0D9;
-	/*很关键：将默认的select选择框样式清除*/
-	appearance: none;
-	-moz-appearance: none;
-	-webkit-appearance: none;
-	/*在选择框的最右侧中间显示小箭头图片*/
-	background: url("http://ourjs.github.io/static/2015/arrow.png") no-repeat scroll right center transparent;
-	background-position: 117px center;
-	background-color: #F3F5F8;
-	/*为下拉小箭头留出一点位置，避免被文字覆盖*/
-	padding-right: 24px;
-
-	font-size: 14px;
-	color: #3A3C40;
-	padding-top: 7px;
-	padding-bottom: 7px;
-	padding-left: 15px;
-	width: 140px;
-	border-radius: 4px;
-}
-/*清除ie的默认选择框样式清除，隐藏下拉箭头*/
-select::-ms-expand {
-	display: none;
-}
-
-.content{
+.SchoolHome{
 	background-color: #F8F7F7;
 	.header{
 		display: flex;
@@ -45,6 +18,12 @@ select::-ms-expand {
 				line-height: 18px;
 				color: #3A3C40;
 				margin-bottom: 40px;
+				a{
+					float: right;
+				    font-size: 14px;
+				    color: #333;
+				    font-weight: normal;
+				}
 			}
 			ul{
 				display: inline-block;
@@ -85,7 +64,6 @@ select::-ms-expand {
 			}
 		}
 	}
-
 	.zoneList{
 		background-color: #FFF;
 		margin-top: 20px;
@@ -94,48 +72,6 @@ select::-ms-expand {
 			font-size: 18px;
 			line-height: 18px;
 			padding: 30px 0 30px 30px;
-		}
-		.listBox{
-			background-color: #FFF;
-			.title{
-				background-color: #FCFCFC;
-				color: #AAAEB2;
-				border-top: 1px solid #EAEAEA;
-				border-bottom: 1px solid #EAEAEA;
-				span{
-					display: inline-block;
-					font-size: 14px;
-					line-height: 14px;
-					padding: 14px 0;
-					padding-left: 30px;
-					vertical-align: middle;
-					width: 15%;
-					&:nth-child(2){
-						width: 12%;
-					}
-					&:nth-child(4){
-						width: 25%;
-					}
-				}
-			}
-			.list{
-				color: #3A3C40;
-				font-size: 16px;
-				border-bottom: 1px solid #EAEAEA;
-				span{
-					display: inline-block;
-					padding: 34px 0;
-					padding-left: 30px;
-					vertical-align: middle;
-					width: 15%;
-					&:nth-child(2){
-						width: 12%;
-					}
-					&:nth-child(4){
-						width: 25%;
-					}
-				}
-			}
 		}
 	}
 }
