--- a/DEV/js/modules/AddOrEditCourse.css
+++ b/DEV/js/modules/AddOrEditCourse.css
@@ -26,7 +26,9 @@
 	    cursor: pointer;
 	}
 }
-
+.dialog_add_lesson .pub_form{
+	padding: 0 10px;
+}
 /*textarea{
 	border: 1px solid #E0E3E8;
 	font-size: 14px;
