--- a/DEV/js/modules/ClassInfo.css
+++ b/DEV/js/modules/ClassInfo.css
@@ -71,7 +71,6 @@
 			background-image: url(../../images/ico_classInfo.png);
 			background-size: 100% 100%;
 			line-height: 20px;
-			padding: 15px 0 0;
 			cursor: pointer;
 			em{
 				position: absolute;
@@ -122,7 +121,9 @@
 		}
 		h6{
 			font-size: 18px;
+			height: 28px;
 			font-weight: 500;
+			padding-top: 8px;
 		}
 		p{
 			font-size: 14px;
