--- a/DEV/js/modules/LessonOperate.css
+++ b/DEV/js/modules/LessonOperate.css
@@ -30,6 +30,20 @@
 		float: left;
 		line-height: 48px;
 	}
+	.list{
+		padding: 30px 0 0;
+		h6{
+			font-size: 14px;
+			line-height: 40px;
+		}
+		p{
+			line-height: 24px;
+			color: #AAAEB3;
+		}
+		span{
+			padding: 0 8px;
+		}
+	}
 
 	
 }
