--- a/DEV/js/modules/Zone.css
+++ b/DEV/js/modules/Zone.css
@@ -1,95 +1,9 @@
-/*button{
-	border-radius: 4px;
-	background-color: #C6C9CE;
-	border: 1px solid #C6C9CE;
-	box-shadow: none;
-	color: #FFF;
-	font-size: 14px;
-	line-height: 14px;
-	min-width: 138px;
-	height: 36px;
-	padding: 11px 0;
-	font-weight: 100;
-	&:focus{
-		outline: none;
-	}
-	&.on{
-		background-color: #4580D3;
-		border-color: #4580D3;
-		cursor: pointer;
-		&:hover{
-			background-color: #1690F3;
-		}
-	}
+.pub_list{
+	.flagship{
+        padding: 11px 14px;
+	    background-image: url(../../images/icon_flagship.jpg);
+	    background-size: 22px 22px;
+	    background-position: 0 center;
+	    background-repeat: no-repeat;
+	}	
 }
-.content{
-	.zoneList{
-		background-color: #FFF;
-		margin-top: 20px;
-		.titleBox{
-			padding: 24px;
-			h3{
-				color: #3A3C40;
-				font-size: 18px;
-				line-height: 18px;
-				padding: 9px 0 9px 30px;
-				display: inline-block;
-				width: auto;
-			}
-			button{
-				float: right;
-				i{
-					font-size: 22px;
-					vertical-align: middle;
-					display: inline-block;
-					line-height: 11px;
-					margin-right: 8px;
-					margin-bottom: 4px;
-				}
-			}
-
-		}
-		.listBox{
-			background-color: #FFF;
-			.title{
-				background-color: #FCFCFC;
-				color: #AAAEB2;
-				border-top: 1px solid #EAEAEA;
-				border-bottom: 1px solid #EAEAEA;
-				span{
-					display: inline-block;
-					font-size: 14px;
-					line-height: 14px;
-					padding: 14px 0;
-					padding-left: 30px;
-					vertical-align: middle;
-					width: 15%;
-					&:nth-child(2){
-						width: 12%;
-					}
-					&:nth-child(4){
-						width: 25%;
-					}
-				}
-			}
-			.list{
-				color: #3A3C40;
-				font-size: 16px;
-				border-bottom: 1px solid #EAEAEA;
-				span{
-					display: inline-block;
-					padding: 34px 0;
-					padding-left: 30px;
-					vertical-align: middle;
-					width: 15%;
-					&:nth-child(2){
-						width: 12%;
-					}
-					&:nth-child(4){
-						width: 25%;
-					}
-				}
-			}
-		}
-	}
-}*/
