--- a/DEV/js/modules/Zone.css
+++ b/DEV/js/modules/Zone.css
@@ -1,8 +1,8 @@
 .pub_list{
 	.flagship{
-        padding: 11px 14px;
-	    background-image: url(../../images/icon_flagship.jpg);
-	    background-size: 22px 22px;
+        padding: 14px 19px;
+	    background-image: url(../../images/icon_flagship.png);
+	    background-size: 28px 37px;
 	    background-position: 0 center;
 	    background-repeat: no-repeat;
 	}	
