--- a/DEV/css/CMD.css
+++ b/DEV/css/CMD.css
@@ -951,9 +951,9 @@ input[type="number"]{
     float: right;
   }
   .flagship{
-    padding: 0 0 0 28px;
-    background-image: url(../images/icon_flagship.jpg);
-    background-size: 22px 22px;
+    padding: 0 0 0 32px;
+    background-image: url(../images/icon_flagship.png);
+    background-size: 28px 37px;
     background-position: 0 center;
     background-repeat: no-repeat;
 
