--- a/DEV/js/modules/SchoolHome.css
+++ b/DEV/js/modules/SchoolHome.css
@@ -4,7 +4,16 @@
 				cursor: context-menu;
 			}
 	}
-} 
+}
+.dialog_edit_introduce{
+	textarea{
+		display: block;
+		    width: 100%;
+		    height: 180px;
+		    line-height: 24px;
+		    font-size: 14px;
+	}
+}
 .SchoolHome{
 	background-color: #F8F7F7;
 	.header{
